--- a/Botoo/Base.lproj/Main.storyboard
+++ b/Botoo/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Qcg-ez-qb3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Qcg-ez-qb3">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -291,6 +291,9 @@
                                 <state key="normal" title="연결 신청">
                                     <color key="titleColor" red="0.85098039219999999" green="0.1058823529" blue="0.37647058820000001" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="connectButtonTapped:" destination="HSz-ki-p1e" eventType="touchUpInside" id="gLe-cr-NqF"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.8098600333" blue="0.82729438300000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -300,7 +303,7 @@
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
                         <outlet property="backButton" destination="1ik-in-drq" id="5B1-g8-wce"/>
-                        <outlet property="searchButton" destination="IpU-N6-W1d" id="up5-Ze-w0P"/>
+                        <outlet property="connectButton" destination="IpU-N6-W1d" id="UOj-FI-pEF"/>
                         <outlet property="searchEmailTextField" destination="pED-Iy-fmT" id="gcE-qN-caC"/>
                         <outlet property="searchResult" destination="agz-yS-aAf" id="Oop-H0-4VI"/>
                     </connections>
