--- a/Botoo/Base.lproj/Main.storyboard
+++ b/Botoo/Base.lproj/Main.storyboard
@@ -1003,7 +1003,7 @@
                                             <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
                                         <connections>
-                                            <action selector="onClickDrop:" destination="c9r-xd-U8f" eventType="touchDown" id="khh-qo-yPF"/>
+                                            <action selector="onClickDrop:" destination="c9r-xd-U8f" eventType="touchDown" id="rWQ-kw-9FK"/>
                                         </connections>
                                     </button>
                                     <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pfj-gT-594">
