--- a/Botoo/Base.lproj/Main.storyboard
+++ b/Botoo/Base.lproj/Main.storyboard
@@ -1273,7 +1273,7 @@
             </objects>
             <point key="canvasLocation" x="1087.5" y="-606.5"/>
         </scene>
-        <!--Title-->
+        <!--Letterr Write View Controller-->
         <scene sceneID="iko-6i-SJg">
             <objects>
                 <viewController storyboardIdentifier="letterWriteViewController" id="TCT-s0-GvF" customClass="LetterrWriteViewController" customModule="Botoo" customModuleProvider="target" sceneMemberID="viewController">
@@ -1290,9 +1290,6 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="EDh-SC-bWg">
-                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                            </navigationBar>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z3t-Di-QSn">
                                 <rect key="frame" x="164" y="550" width="46" height="30"/>
                                 <state key="normal" title="다썼음">
@@ -1321,7 +1318,6 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Title" id="tRj-wf-bLZ"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
                         <outlet property="letterText" destination="bgd-wu-zXp" id="e4f-Jv-bVs"/>
